# nmiai

./: .env.example  .gitignore  pyproject.toml
task1_object_detection/: .gitignore  EXPERIMENTS.md  FINDINGS.md  README.md  analyze_dataset.py  build_submission.sh  run.py  setup_labelstudio.sh
task1_object_detection/agent/: agent.py  config.py  main.py  tools.py
task1_object_detection/experiments/: analyze_intraclass.py  build_classifier_dataset.py  build_detection_soft_labels.py  build_embedding_teacher.py  build_soft_labels.py  diagnose_weakness.py  evaluate.py  finetune_clip_teacher.py  fixed_super_categories.py  log_analysis.py  prepare_dataset.py  prepare_single_class.py  prepare_superclass.py  start_tracking.sh  test_clip.py  test_ocr.py  test_trocr.py  test_yolo_features.py  train_baseline.py  train_classifier.py  train_clip_classifier.py  train_detector.py  train_detector_gpu.py  train_distilled.py  train_distilled_v3.py  train_yolo_classifier.py
task1_object_detection/submission/: build_submission.sh  run.py
task1_object_detection/submission/test_sandbox/: Dockerfile  run_test.sh
task2_tripletex/: README.md  accounting_concepts.py  agent.py  api_docs_tool.py  api_reference.py  build_index.py  devdocs_tool.py  enrich_traces.py  experience_checker.py  experience_tool.py  index_traces.py  main.py  models.py  payload_templates.py  pdf_extractor.py  prefetch_agent.py  schema_agent.py  task_patterns.py  task_patterns_tool.py  test_agent.py  tools.py  web_search_tool.py  workflow_tools.py
(+1 files in other folders)
