[project]
name = "nmiai"
version = "0.1.0"
description = "NM i AI Competition - Object Detection & Tripletex Agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.20",
    "langfuse>=4.0.1",
    "langgraph>=1.1.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
]

