[project]
name = "nmiai"
version = "0.1.0"
description = "NM i AI Competition - Object Detection & Tripletex Agent"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.20",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langfuse>=4.0.1",
    "langgraph>=1.1.3",
    "numpy>=2.4.3",
    "pycocotools>=2.0.11",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "supervision>=0.27.0.post2",
    "ultralytics==8.1.0",
    "uvicorn>=0.42.0",
]

